// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parser parse it should generate node when one of option of the or exists 1`] = `
Token {
  "loc": Object {
    "end": Object {
      "column": 3,
      "line": 0,
    },
    "start": Object {
      "column": 1,
      "line": 0,
    },
  },
  "token": Object {
    "range": Object {
      "end": Object {
        "column": 3,
        "line": 0,
      },
      "start": Object {
        "column": 1,
        "line": 0,
      },
    },
    "type": "LET",
    "value": "let",
  },
  "type": "TOKEN",
}
`;

exports[`Parser parse it should generate node when option node exists 1`] = `
Token {
  "loc": Object {
    "end": Object {
      "column": 3,
      "line": 0,
    },
    "start": Object {
      "column": 1,
      "line": 0,
    },
  },
  "token": Object {
    "range": Object {
      "end": Object {
        "column": 3,
        "line": 0,
      },
      "start": Object {
        "column": 1,
        "line": 0,
      },
    },
    "type": "LET",
    "value": "let",
  },
  "type": "TOKEN",
}
`;

exports[`Parser parse it should generate root node but no separator children node 1`] = `
ListNode {
  "children": Array [],
  "loc": Object {
    "end": Object {
      "column": 3,
      "line": 0,
    },
    "start": Object {
      "column": 1,
      "line": 0,
    },
  },
}
`;

exports[`Parser parse it should generate root node but no token type children node 1`] = `
ListNode {
  "children": Array [],
  "loc": Object {
    "end": null,
    "start": null,
  },
}
`;

exports[`Parser parse it should generate token node 1`] = `
Token {
  "loc": Object {
    "end": Object {
      "column": 3,
      "line": 0,
    },
    "start": Object {
      "column": 1,
      "line": 0,
    },
  },
  "token": Object {
    "range": Object {
      "end": Object {
        "column": 3,
        "line": 0,
      },
      "start": Object {
        "column": 1,
        "line": 0,
      },
    },
    "type": "LET",
    "value": "let",
  },
  "type": "TOKEN",
}
`;

exports[`Parser parse it should match as many as token when the rule is repeat 1`] = `
ListNode {
  "children": Array [
    Token {
      "loc": Object {
        "end": Object {
          "column": 3,
          "line": 0,
        },
        "start": Object {
          "column": 1,
          "line": 0,
        },
      },
      "token": Object {
        "range": Object {
          "end": Object {
            "column": 3,
            "line": 0,
          },
          "start": Object {
            "column": 1,
            "line": 0,
          },
        },
        "type": "LET",
        "value": "let",
      },
      "type": "TOKEN",
    },
    Token {
      "loc": Object {
        "end": Object {
          "column": 3,
          "line": 0,
        },
        "start": Object {
          "column": 1,
          "line": 0,
        },
      },
      "token": Object {
        "range": Object {
          "end": Object {
            "column": 3,
            "line": 0,
          },
          "start": Object {
            "column": 1,
            "line": 0,
          },
        },
        "type": "LET",
        "value": "let",
      },
      "type": "TOKEN",
    },
  ],
  "loc": Object {
    "end": Object {
      "column": 3,
      "line": 0,
    },
    "start": Object {
      "column": 1,
      "line": 0,
    },
  },
}
`;

exports[`Parser parse it should match the snapshot when rule is nested and complicated 1`] = `
VariableStatement {
  "declarations": Array [
    Token {
      "loc": Object {
        "end": Object {
          "column": 5,
          "line": 0,
        },
        "start": Object {
          "column": 5,
          "line": 0,
        },
      },
      "token": Object {
        "range": Object {
          "end": Object {
            "column": 5,
            "line": 0,
          },
          "start": Object {
            "column": 5,
            "line": 0,
          },
        },
        "type": "IDENTIFIER",
        "value": "a",
      },
      "type": "TOKEN",
    },
  ],
  "kind": undefined,
  "loc": Object {
    "end": Object {
      "column": 10,
      "line": 0,
    },
    "start": Object {
      "column": 1,
      "line": 0,
    },
  },
  "type": "VARIABLE_STATEMENT",
}
`;
